# 5billion_in_my_bank_account

./: .env_preset  .gitignore  README.md  config.py  env_base  main.py  pyproject.toml  temp_static.txt  test  test.db
app/: auth.py  db.py  main.py
app/models/: diary.py  user.py
app/routes/api/: diary.py  user.py
data/: quotes.xlsx
scraping/: import_data.py  question_scraping.py  quotes_scraping.py
src/model/: bookmarks.py  posts.py  questions.py  quotes.py  users.py
src/model/schema/: post.py  questions.py  quotes.py  token.py  user.py
src/router/: posts.py  questions.py  quotes.py  static.py  users.py
src/static/asset/css/: main.css  styles.css
src/static/asset/js/: app.js  main.js
src/static/html/: index.html
src/static/response/: 404.html
src/tools/: image.py  jwt.py
